add handleUpdate and input change event listener

--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -59,8 +59,15 @@
       width:100px;
     }
   </style>
-
   <script>
+    const inputs = document.querySelectorAll("input");
+    function handleUpdate() {
+      console.log(this.value);
+    }
+
+    inputs.forEach((input) => {
+      input.addEventListener("change", handleUpdate);
+    })
   </script>
 
 </body>
