--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -67,6 +67,7 @@
 
     inputs.forEach((input) => {
       input.addEventListener("change", handleUpdate);
+      input.addEventListener("mousemove", handleUpdate);
     })
   </script>
 
