--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -62,7 +62,8 @@
   <script>
     const inputs = document.querySelectorAll("input");
     function handleUpdate() {
-      console.log(this.value);
+      const suffix = this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`, `${this.value}${suffix}`);
     }
 
     inputs.forEach((input) => {
